--- a/Frontend/templates/trangchu.html
+++ b/Frontend/templates/trangchu.html
@@ -11,23 +11,22 @@
 </head>
 <body id="body">
 
-  # các tiêu đề chính
-    <nav aria-label="breadcrumb">
+    <nav aria-label="breadcrumb" id="mo">
         <ol class="breadcrumb" id="title">
-            <li class="breadcrumb-item" ><a href="#"> <strong> <i style="color:rgb(0, 255, 136)"> Post</i></strong></a></li>
+          <li class="breadcrumb-item" ><a href="/trangchu"> <strong> <i style="color:rgb(0, 255, 136)"> Hom </i></strong></a></li>
+          <li class="breadcrumb-item" ><a href="/post"> <strong> <i style="color:rgb(0, 255, 136)"> Post</i></strong></a></li>
           <li class="breadcrumb-item"><a href="#"> <strong> <i style="color:rgb(0, 255, 136)">Map</i></strong></a></li>
           <li class="breadcrumb-item active" aria-current="page">
-            <a href="#" style="color:rgb(0, 255, 136)">Login</a>
+            <a href="/login" style="color:rgb(0, 255, 136)">Login</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            <a href="/signup" style="color:rgb(0, 255, 136)">Sign up</a>
           </li>
         </ol>
       </nav>
 
       <h2 style="color:rgb(255, 35, 119); font-family: cursive; font-size: 33px" id="thu">A few suggestions for you</h2>
     
-      
-
-      # mấy trang show more em sẽ thêm sau
-      # làm màu thôi, ko liên quan đến cái đã bàn
       <div class="row" id="thu">
           <div class="col-sm-6">
             <div class="card">
@@ -52,14 +51,11 @@
         </div>
         <p></p>
 
-
-
-        
         <div class="row" id="thu">
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body" id="div">
-                    <img src="https://media2.s-nbcnews.com/j/streams/2013/May/130513/1C7355339-130513-betsy-dan-paris.social_share_1024x768_scale.jpg" class="card-img-top" alt="..." id="height"> 
+                    <img src="https://www.telegraph.co.uk/content/dam/Travel/2018/May/paris.jpg?imwidth=450" class="card-img-top" alt="..." id="height"> 
                   <h5 class="card-title">Paris</h5>
                   <p class="card-text">Đây là đoạn giới thiệu ...</p>
                   <a href="#" class="btn btn-primary">Show more</a>
@@ -77,11 +73,7 @@
               </div>
             </div>
           </div>
-
-
-
-          <p>
-          </p>
+          <p></p>
 
           <div class="row" id="thu">
               <div class="col-sm-6">
@@ -106,9 +98,6 @@
               </div>
             </div>
             <p></p>
-    
-    
-    
             
             <div class="row" id="thu">
                 <div class="col-sm-6">
