--- a/project/templates/trangchu.html
+++ b/project/templates/trangchu.html
@@ -14,10 +14,13 @@
   # các tiêu đề chính
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb" id="title">
-            <li class="breadcrumb-item" ><a href="#"> <strong> <i style="color:rgb(0, 255, 136)"> Post</i></strong></a></li>
+          <li class="breadcrumb-item" ><a href="#"> <strong> <i style="color:rgb(0, 255, 136)"> Post</i></strong></a></li>
           <li class="breadcrumb-item"><a href="#"> <strong> <i style="color:rgb(0, 255, 136)">Map</i></strong></a></li>
           <li class="breadcrumb-item active" aria-current="page">
             <a href="#" style="color:rgb(0, 255, 136)">Login</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            <a href="#" style="color:rgb(0, 255, 136)">Sign up</a>
           </li>
         </ol>
       </nav>
